# format-json-log

./: Cargo.toml  README.md
fixtures/: log.json
src/: main.rs
