[package]
name = "format-json-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
colored_json = "3.2.0"
serde = "1.0.164"
serde_json = "1.0.97"
yansi = "0.5.1"

[dev-dependencies]
insta = "1.30.0"
